--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,10 @@
     <p class="text-muted" ng-hide="tweets.length">Please wait for tweets...</p>
 
     <hr/>
-    <p><a href="https://twitter.com/slashdotpeter" title="Hit me on twitter ;)">@slashdotpeter</a></p>
+    <p>
+        <a href="https://twitter.com/slashdotpeter" title="Hit me on twitter ;)">@slashdotpeter</a><br/>
+        <a href="https://github.com/hekike/sentiment-stream" title="Check the code on GitHub">Source code</a>
+    </p>
 
 </div>
 <!-- /container -->
