--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
 
     <hr/>
     <p>
-        <a href="https://twitter.com/slashdotpeter" title="Hit me on twitter ;)">@slashdotpeter</a><br/>
-        <a href="https://github.com/hekike/sentiment-stream" title="Check the code on GitHub">Source code</a>
+        <a href="https://twitter.com/slashdotpeter" class="pull-left" title="Hit me on twitter ;)">@slashdotpeter</a>
+        <a href="https://github.com/hekike/sentiment-stream" class="pull-right" title="Check the code on GitHub">Source code</a>
     </p>
 
 </div>
